crates/usfm_parser/tests/snapshots/recovery__malformed_chapter_number.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c one\n\\p \\v 1 a"
---
Book GEN "" @0..7
Para p@15..24
  VerseStart 1@18..22
  Text "a"@23..24
  VerseEnd 1
--- diagnostics
error[malformed-chapter-number] @11..14: `one` is not a valid chapter number
