crates/usfm_parser/tests/snapshots/recovery__malformed_verse_number.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v one a \\v 2- b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..32
  Text "a b"@23..32
ChapterEnd 1
--- diagnostics
error[malformed-verse-number] @19..22: `one` is not a valid verse number
error[malformed-verse-number] @28..30: `2-` is not a valid verse number
