crates/usfm_parser/tests/snapshots/recovery__milestone_not_closed.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a \\qt-s |who=\"Pilate\" b \\qt-e\\* c"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..54
  VerseStart 1@16..20
  Text "a "@21..23
  Milestone qt-s@23..45 who="Pilate" "b "
  Milestone qt-e@45..52
  Text " c"@52..54
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[milestone-not-closed] @23..28: milestone `\qt-s` is not closed by `\*`
