crates/usfm_parser/tests/snapshots/recovery__missing_attribute_value.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 \\w word|lemma= strong=\"H1234\"\\w*"
snapshot_kind: text
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..53
  VerseStart 1@16..20
  Char w@21..53 lemma="" strong="H1234"
    Text "word"@24..28
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[missing-attribute-value] @35..35: `=` is not followed by a value
