crates/usfm_parser/tests/snapshots/recovery__missing_book_code.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id\n\\c 1\n\\p \\v 1 a"
---
ChapterStart 1@4..8
Para p@9..18
  VerseStart 1@12..16
  Text "a"@17..18
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[missing-book-code] @0..3: `\id` must be followed by a book code
