crates/usfm_parser/tests/snapshots/recovery__missing_chapter_number.snap
---
source: crates/usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c\n\\p \\v 1 a"
---
Book GEN "" @0..7
Para p@11..20
  VerseStart 1@14..18
  Text "a"@19..20
  VerseEnd 1
--- diagnostics
error[missing-chapter-number] @8..10: `\c` must be followed by a chapter number
