crates/usfm_parser/tests/snapshots/recovery__missing_note_caller.snap
---
source: usfm_parser/tests/recovery.rs
description: "\\id GEN\n\\c 1\n\\p \\v 1 a\\f \\ft note\\f* b"
---
Book GEN "" @0..7
ChapterStart 1@8..12
Para p@13..38
  VerseStart 1@16..20
  Text "a"@21..22
  Note f caller=+@22..36
    Char ft@25..36
      Text "note"@29..33
  Text " b"@36..38
  VerseEnd 1
ChapterEnd 1
--- diagnostics
error[missing-note-caller] @22..24: `\f` must be followed by a caller (`+`, `-`, or custom); `+` assumed
